<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.lennartklein.lennartklein_pset5.OrderFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/title_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_order"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <ListView
            android:id="@+id/list_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/error_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_order"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:id="@+id/order_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/order_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorNegative"
                android:layout_marginEnd="@dimen/small_padding"
                android:text="@string/action_clear" />

            <Button
                android:id="@+id/order_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_padding"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:text="@string/action_place" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
